--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -88,7 +88,8 @@ h2,
 h3,
 h4,
 h5,
-h6 {
+h6,
+h7 {
     margin-top: 0;
     margin-bottom: 0.5rem;
 }
@@ -374,12 +375,14 @@ h3,
 h4,
 h5,
 h6,
+h7,
 .h1,
 .h2,
 .h3,
 .h4,
 .h5,
-.h6 {
+.h6,
+.h7 {
     margin-bottom: 0.5rem;
     font-weight: 500;
     line-height: 1.2;
@@ -413,6 +416,11 @@ h5,
 h6,
 .h6 {
     font-size: 1rem;
+}
+
+h7,
+.h7 {
+    font-size: 0.75rem;
 }
 
 .lead {
@@ -2695,6 +2703,13 @@ textarea.form-control.is-invalid {
     cursor: pointer;
 }
 
+.delete {
+    background-color: transparent;
+    border: none;
+    color: #c82333;
+    cursor: pointer;
+}
+
 .btn:hover {
     color: #212529;
     text-decoration: none;
@@ -4704,8 +4719,14 @@ input[type="button"].btn-block {
 
 .pict {
     display: block;
-    width: 75px;
-    height: 75px;
+    width: 60px;
+    height: 60px;
+}
+
+.profile {
+    display: block;
+    width: 170px;
+    height: 170px;
 }
 
 @media (max-width: 575.98px) {
@@ -5855,6 +5876,22 @@ a.badge-dark.focus {
 .media-body {
     -ms-flex: 1;
     flex: 1;
+}
+
+.media-profile {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    margin-top: 1rem;
+    margin-right: 1rem;
+    margin-bottom: 1rem;
+}
+
+.media-profile-body {
+    -ms-flex: 1;
+    flex: 1;
+    margin: 1rem;
 }
 
 .list-group {
